--- a/generators/templates/context.tsx.hbs
+++ b/generators/templates/context.tsx.hbs
@@ -3,16 +3,16 @@ import React, {
   useContext,
 } from "react";
 
-export interface {{pascalCase name}}Context{}
+export interface I{{pascalCase name}}Context{}
 
 export type Props = {
   children: JSX.Element[] | JSX.Element;
 };
 
-export const {{pascalCase name}}Context = createContext<{{pascalCase name}}Context>({} as {{pascalCase name}}Context);
+export const {{pascalCase name}}Context = createContext<I{{pascalCase name}}Context>({} as I{{pascalCase name}}Context);
 
-const {{pascalCase name}}Provider = ({ children }: Props) => {
-  const {{camelCase name}}Object: {{pascalCase name}}Context = {};
+function {{pascalCase name}}Provider ({ children }: Props) {
+  const {{camelCase name}}Object: I{{pascalCase name}}Context = {};
 
   return (
     <{{pascalCase name}}Context.Provider value={ {{camelCase name}}Object}>
