--- a/generators/templates/index.test.tsx.hbs
+++ b/generators/templates/index.test.tsx.hbs
@@ -1,4 +1,5 @@
-import { expectTextToBeInTheDocument, renderComponent } from "config/testUtils";
+import { renderComponent } from "config/testUtils";
+import { expectTextToBeInTheDocument } from "config/testUtils/expects";
 import {{pascalCase name}} from ".";
 
 describe("{{pascalCase name}}", () => {
