--- a/generators/templates/context.test.tsx.hbs
+++ b/generators/templates/context.test.tsx.hbs
@@ -1,4 +1,5 @@
-import { expectTextToBeInTheDocument, renderComponent } from "config/testUtils";
+import { renderComponent } from "config/testUtils";
+import { expectTextToBeInTheDocument } from "config/testUtils/expects";
 import { use{{pascalCase name}} } from ".";
 
 function {{ pascalCase name }}TestPage(){
